--- a/app/_includes/nav-v2.html
+++ b/app/_includes/nav-v2.html
@@ -53,6 +53,9 @@
                 <a href="/mesh/latest/" class="navbar-item navbar-item-docs">Kong Mesh</a>
               </li>
               <li role="menuitem" class="docs-dropdown-li" tabindex="-1">
+                <a href="/gateway-operator/latest/" class="navbar-item navbar-item-docs">Kong Gateway Operator</a>
+              </li>
+              <li role="menuitem" class="docs-dropdown-li" tabindex="-1">
                 <a href="/hub/" class="navbar-item navbar-item-docs">Plugin Hub</a>
               </li>
               <li role="menuitem" class="docs-dropdown-li" tabindex="-1">
