--- a/app/_includes/breadcrumbs.html
+++ b/app/_includes/breadcrumbs.html
@@ -31,6 +31,9 @@
 {% elsif include.edition == 'gateway' %}
   {% capture product_url %}/gateway/{{version}}/{% endcapture %}
   {% capture product_title %}{{ site.base_gateway }}{% endcapture %}
+{% elsif include.edition == 'gateway-operator' %}
+  {% capture product_url %}/gateway-operator/{{version}}/{% endcapture %}
+  {% capture product_title %}{{ site.kgo_product_name }}{% endcapture %}
 {% elsif include.edition == 'getting-started-guide' %}
   {% capture product_url %}/getting-started-guide/{{version}}/overview{% endcapture %}
   {% capture product_title %}Get Started with Kong Gateway{% endcapture %}
