Fix menu items on mobile

--- a/app/_includes/nav-v2.html
+++ b/app/_includes/nav-v2.html
@@ -96,8 +96,7 @@
         Start Free Trial
       </a>
     </div>
-    <div id="navbar-menu-toggle-button" class="small-screen-button" aria-label="Toggle navigation"
-      onclick="toggleButtonClicked()">
+    <div id="navbar-menu-toggle-button" class="small-screen-button" aria-label="Toggle navigation">
       <div></div>
       <div></div>
       <div></div>
