--- a/app/_includes/nav-v2.html
+++ b/app/_includes/nav-v2.html
@@ -19,7 +19,7 @@
     {% if include.layout != "landing-page" %}
     <div class="separator mobile"></div>
     <div class="search-input-wrapper">
-      <img src="/assets/images/landing-page/search.svg" alt="search" onclick="handleSearchClicked()">
+      <img src="/assets/images/landing-page/search.svg" alt="search">
       <input id="getkong-algolia-search-input" type="text" role="search" placeholder="Search the docs...">
     </div>
 
