Align topnav Logo + buttons

--- a/app/_assets/stylesheets/header-v2.less
+++ b/app/_assets/stylesheets/header-v2.less
@@ -52,7 +52,7 @@ header.navbar-v2 {
 
   .main-menu-item {
     list-style-type: none;
-    padding-top: 35px;
+    padding-top: 32px;
   }
 
   .navbar-item-submenu {
@@ -60,7 +60,7 @@ header.navbar-v2 {
   }
 
   #docs-link {
-    padding-top: 35px;
+    padding-top: 32px;
   }
 
   .navbar-content {
@@ -73,6 +73,7 @@ header.navbar-v2 {
     background: white;
 
     .navbar-brand {
+      display: flex;
       flex-shrink: 0;
       max-width: 100px;
 
@@ -91,7 +92,6 @@ header.navbar-v2 {
       margin-right: 8px;
       margin-left: 8px;
       color: @steel-200;
-      padding-bottom: 6px;
     }
 
     .separator {
@@ -110,7 +110,7 @@ header.navbar-v2 {
       display: flex;
       align-items: center;
       margin: 0 20px 0 30px;
-      padding: 2px 16px;
+      padding: 0px 16px;
       background: rgba(248, 249, 252, 1);
       border-radius: 100px;
       width: 208px;
@@ -130,6 +130,7 @@ header.navbar-v2 {
 
       .algolia-autocomplete {
         flex-grow: 1;
+        max-height: 34px;
       }
 
       img {
