--- a/app/_includes/nav-v2.html
+++ b/app/_includes/nav-v2.html
@@ -93,7 +93,7 @@
                       <img src="/assets/images/landing-page/view-all-plugins.svg" alt="View all plugins">
                       <span class="docs-dropdown-li__card-image">
                         View all plugins
-                        <img src="/assets/images/landing-page/arrow-right.svg" alt="">
+                        <img src="/assets/images/landing-page/arrow-right.svg" alt="View all plugins arrow image">
                       </span>
                     </div>
                   </div>
@@ -102,8 +102,12 @@
 
               <li role="menuitem" class="docs-dropdown-li docs-dropdown-li-hub" tabindex="-1">
                 <div class="docs-dropdown-li__section">
-                  <div class="docs-dropdown-li__section-title heading">
-                    Functionality
+                  <div class="docs-dropdown-li__section-title">
+                    <span class="heading">Functionality</span>
+                    <a href="/hub/" class="view-all">
+                      View all
+                      <img src="/assets/images/landing-page/arrow-right.svg" alt="View all arrow image">
+                    </a>
                   </div>
 
                   <div class="docs-dropdown-li__section-items">
