Fix styles in safari

--- a/app/_assets/stylesheets/header-v2.less
+++ b/app/_assets/stylesheets/header-v2.less
@@ -167,8 +167,9 @@ header.navbar-v2 {
       .item__description {
         display: flex;
         flex-direction: column;
-        text-wrap: balance;
         color: #2E2E2E;
+        white-space: normal;
+        word-break: break-word;
 
         &-title {
           font-size: 16px;
