--- a/app/_assets/stylesheets/header-v2.less
+++ b/app/_assets/stylesheets/header-v2.less
@@ -48,16 +48,13 @@ header.navbar-v2 {
 
   .docs-dropdown-li {
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin: 0;
 
-    &-hub {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      margin: 0;
-
-      &:last-child {
-        flex-grow: 2;
-      }
+    &:last-child {
+      flex-grow: 2;
     }
   }
 
@@ -140,10 +137,13 @@ header.navbar-v2 {
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
+      justify-content: flex-start;
 
       @media (min-width: 1100px) {
-        row-gap: 15px;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 20%);
+        justify-content: space-between;
+        grid-gap: 15px;
       }
     }
 
@@ -161,7 +161,10 @@ header.navbar-v2 {
 
       @media (min-width: 1100px) {
         padding: 16px 64px 16px 16px;
-        width: 19%;
+      }
+
+      img {
+        width: 24px;
       }
 
       .item__description {
@@ -340,50 +343,35 @@ header.navbar-v2 {
         }
 
         .navbar-item-submenu {
-          &__hub {
-            width: 100vw;
-            position: fixed;
-            top: 60px;
-            left: 0;
-            max-height: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: row;
-          }
-
-          position: absolute;
-          left: -16px;
-          top: 100%;
-          width: 320px;
-          display: flex;
-          flex-direction: column;
-          overflow: hidden;
+          width: 100vw;
+          position: fixed;
+          top: 60px;
+          left: 0;
           max-height: 0;
+          padding: 0;
+          flex-direction: row;
+          display: flex;
+          overflow: hidden;
           background: white;
           box-shadow: 0 8px 24px rgba(4, 53, 88, 0.1);
           transition: max-height 0.25s, padding-top 0.25s, padding-bottom 0.25s;
 
           .submenu-section {
             display: flex;
-            flex-direction: column;
             padding-bottom: 8px;
+            align-items: center;
+            flex-direction: row;
+            width: 100%;
+            padding: 0 !important;
 
-            &__hub {
-              display: flex;
-              align-items: center;
-              flex-direction: row;
-              width: 100%;
-              padding: 0 !important;
+            @media (max-width: 1100px) {
+              flex-direction: column;
+              align-items: flex-start;
+            }
 
-              @media (max-width: 1100px) {
-                flex-direction: column;
-                align-items: flex-start;
-              }
-
-              .heading {
-                color: #494E50;
-                text-transform: uppercase;
-              }
+            .heading {
+              color: #494E50;
+              text-transform: uppercase;
             }
 
             &:first-child {
@@ -410,21 +398,27 @@ header.navbar-v2 {
           }
         }
 
-        &:hover,
         &.submenu-opened {
           color: #1155cb;
+
+          &:before{
+            position: fixed;
+            content: ' ';
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: -1;
+            cursor: initial;
+          }
 
           > a {
             color: #1155cb;
           }
 
           .navbar-item-submenu {
-            max-height: 800px;
-          }
-
-          .navbar-item-submenu__hub {
             @media (min-width: 1100px) {
-              min-height: 359px;
+              max-height: 800px;
             }
           }
         }
