Add OAS landing page

--- a/app/_layouts/oas/spec.html
+++ b/app/_layouts/oas/spec.html
@@ -6,5 +6,5 @@ oas: true
 <div id="app"></div>
 
 <script>
-  window.oas = { "product": {{ page.product_info | jsonify }}, "version": {{ page.version | jsonify }} }
+  window.oas = { "product": {{ page.product.as_json | jsonify }}, "version": {{ page.version | jsonify }} }
 </script>
