--- a/app/_includes/nav-v2.html
+++ b/app/_includes/nav-v2.html
@@ -76,6 +76,11 @@
               </div>
           </ul>
         </li>
+
+        <li role="menuitem" class="main-menu-item">
+          <a href="/api/" class="navbar-item">API Specs</a>
+        </li>
+
         <li role="menuitem" tabindex="0" id="plugin-link" class="main-menu-item">
           <a href="/hub/" class="navbar-item">Plugin Hub</a>
         </li>
