--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -74,6 +74,10 @@ site.title }}{% endcapture %} {% else %} {% capture page_title %}{{ include.titl
     content="CrU3zp02dNKTe8NSAipL4NCPkrIjDXG8fViTZ-MIzP4"
   />
 
+  {% for tag in page.algolia_docsearch_meta %}
+    <meta name="{{ tag.name }}" content="{{ tag.value }}" />
+  {% endfor %}
+
   <script type="application/ld+json">
     {
       "@context": "http://schema.org",
