Fix and style link in OAS landing page

--- a/app/_layouts/oas/index.html
+++ b/app/_layouts/oas/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="page-hub--header-background"></div>
   <div class="page-hub--header">
     <h1>Welcome to Kong API Specs</h1>
-    <h2>This section of our docs site is Powered by Konnect, using [customizations available for the DevPortal](/konnect/dev-portal/customization/).</h2>
+    <h2>This section of our docs site is Powered by Konnect, using <a href="/konnect/dev-portal/customization/">customizations available for the DevPortal</a>.</h2>
   </div>
 
   <div class="landing-page">
