--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -62,7 +62,7 @@ site.title }}{% endcapture %} {% else %} {% capture page_title %}{{ include.titl
   <meta name="twitter:site" content="@thekonginc" />
   <meta name="twitter:creator" content="@thekonginc" />
   <meta name="twitter:url" content="{{ site.links.web }}" />
-  <meta name="twitter:description" content="{{ site.description }}" />
+  <meta name="twitter:description" content="{{ page_description }}" />
   <meta
     name="twitter:image"
     content="{{ site.links.web }}/assets/images/share.png"
