--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -6,8 +6,12 @@ site.title }}{% endcapture %} {% else %} {% capture page_title %}{{ include.titl
 {% endunless %}
 
 {% assign page_description = site.description %}
+{% if layout.description %}
+  {% assign page_description = layout.description %}
+{% endif %}
+
 {% if include.description %}
-{% assign page_description = include.description %}
+  {% assign page_description = include.description %}
 {% endif %}
 
 <head>
